AA-2007-11-15-0: Enhancem.: added support for new JMX parameters
                 Review:    CR

CR-2007-11-14-1: Enhancem.: added new hedeby test: file_permissions
                 Bugfix:    Fixed and enhanced following tests:
                               o manage_admin_user
                               o show_status
                               o issue_67
                               o issue_88
                 Enhancem.: Support for interactive sdmadm command
                 Review:    RH

CR-2007-11-14-0: Bugfix:    Removed possiblity to see plain passwords
                            when testsuite is started in debug mode
                 Review:    JG

RH-2007-11-13-0: Bugfix:    Hedeby non ssl installation was broken
                 Issue:     Hedeby 146
                 Review:    CR

CR-2007-11-13-0: Bugfix:    Fixed problem with connection method setting when
                            creating testsuite configuration from scratch
                 Review:    JG

JG-2007-11-13-0: Bugfix:    Suppress running tests for fixes that have only been
                            done for 6.1 or higher in 6.0 clusters.
                            Some cleanup.
                 Review:    MD

AP-2007-11-09-0: Bugfix:    Updating the checktree_arco due to the creating 60 from 61

RH-2007-11-09-0: Bugfix:    Hedeby: jvm run file does not longer contain the jmx url
                 Review:    CR

JG-2007-11-09-0: Bugfix:    drmaa-j test lookup for java was incorrect.
                 Review:    MD

JG-2007-11-08-0: Bugfix:    Fixed set_config_and_propagate for SGE <= 6.1.
                 Review:    EB

JG-2007-11-07-0: Enhancem.: Enhanced system_tests/qmaster/reporting to test
                            writing of consumable records.
                            Some cleanup and minor fixes.
                 Review:    EB

AP-2007-11-05-0: Enhancem.: o checktree_arco: added tablespaces to the ARCo 
                              configuration