@@ -181,6 +181,9 @@ proc write_autoinst_config {filename host {do_cleanup 1}} {
    puts $fdo "SGE_EXECD_PORT=\"$execd_port\""
    
    if {$ts_config(jmx_port) > 0} {
+      set jvm_lib_path [get_jvm_lib_path_for_host $ts_config(master_host)]
+      puts $fdo "SGE_JVM_LIB_PATH=\"$jvm_lib_path\""
+      puts $fdo "SGE_ADDITIONAL_JVM_ARGS=\"\""
       puts $fdo "SGE_JMX_PORT=\"$ts_config(jmx_port)\""
    }
    puts $fdo "CELL_NAME=\"$ts_config(cell)\""
