@@ -1,3 +1,7 @@
+AA-2007-11-15-1: Enhancem.: added support for new JMX parameters
+                            automatic installation
+                 Review:    CR
+
 AA-2007-11-15-0: Enhancem.: added support for new JMX parameters
                  Review:    CR
 
